# ia-iii

./: .gitignore  README.md  main.py  pyproject.toml
data/reference/: municipios_ba_ibge.csv
docs/: relatorio_confronto_literatura.md  roteiro_10min.md
experiments/: experiments.jsonl
ml/: __init__.py  __main__.py  columns.py  dataset.py  encoding.py  engenharia_atributos.py  experiments.py  feature_engineering.py  ibge.py  modelagem.py  preprocess.py  run.py  train.py  validate.py
notebooks/: 01_auditoria_base.ipynb  02_exploracao_experimentos.ipynb  03_importancia_por_municipio.ipynb  modelagem_sinasc.ipynb
scripts/: fetch_municipios_ba_ibge.py  gera_base_modelagem.py  treina_modelos.py
slides/: Bibliografia.bib  roteiro_10min.md  slides.tex
