[project]
name = "ia-iii"
version = "0.1.0"
description = "Aprendizado supervisionado — SINASC (determinantes de cesárea)"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pysus>=2.5.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false
